# SistemaVentas

./: CMakeLists.txt  SistemaVentasArboles.pro  arbolcategorias.cpp  arbolcategorias.h  arbolclientes.cpp  arbolclientes.h  arbolproductos.cpp  arbolproductos.h  arbolproveedores.cpp  arbolproveedores.h  arbolsupermercados.cpp  arbolsupermercados.h  leerArchivos.cpp  listalugares.cpp  listalugares.h  listaventas.cpp  listaventas.h  main.cpp  nodocategoria.cpp  nodocategoria.h  nodocliente.cpp  nodocliente.h  nodolugar.cpp  nodolugar.h  nodoproducto.cpp  nodoproducto.h  nodoproductocomprado.cpp  nodoproductocomprado.h  nodoproveedor.cpp  nodoproveedor.h  nodosupermercado.cpp  nodosupermercado.h  nodoventa.cpp  nodoventa.h  server.cpp  server.h
